--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@google/generative-ai": "^0.17.1",
     "@react-navigation/native": "^6.0.2",
+    "@rnmapbox/maps": "^10.1.29",
+    "axios": "^1.7.5",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -26,13 +31,23 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^10.12.5",
+    "mapbox": "^1.0.0-beta10",
+    "moment": "^2.30.1",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-calendar-picker": "^8.0.5",
+    "react-native-calendars": "^1.1306.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.18.0",
+    "react-native-placesearch": "^4.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
