--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-travel-planner",
+  "name": "GDGC",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@google/generative-ai": "^0.17.1",
+    "@react-native-firebase/firestore": "^20.5.0",
     "@react-navigation/native": "^6.0.2",
     "@rnmapbox/maps": "^10.1.29",
     "axios": "^1.7.5",
@@ -25,6 +26,7 @@
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.21",
     "expo-splash-screen": "~0.27.5",
@@ -43,6 +45,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.18.0",
+    "react-native-paper": "^5.12.5",
     "react-native-placesearch": "^4.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
